# Hemo-sclera

./: .coveragerc  .dockerignore  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  accuracy_report.py  anemia_rf_model.pkl  app.py  debug_jaundice.py  debug_paths.py  docker-compose.yml  evaluate_models.py  generate_hero_graph.py  jaundice_lr_model.pkl  master_metadata.csv  package-lock.json  package.json  pipeline.py  pyproject.toml  requirements.txt  sanity.py  test_gemini.py  vercel.json
.github/workflows/: ci.yml
Datasets/anemia/: Dataset anemia.docx
Datasets/anemia/India/: India.xlsx
Datasets/anemia/Italy/: Italy.xlsx
Datasets/jaundice/: README.dataset.txt  README.roboflow.txt
Datasets/jaundice/test/: _tokenization.txt
docs/: api_reference.md  architecture.md
engine/: color_logic.py  data_prep.py  diagnostic_models.py  inference.py  sclera_seg.py  train_yolo.py
landing_page/: index.html  script.js  style.css
pages/: index.js
pages/api/: infer.js
styles/: globals.css
tests/: test_color_logic.py  test_pipeline.py
tmp/: show_models.py
yolo_anemia/: anemia_yolo.yaml
yolo_anemia/labels/: train.cache  val.cache
yolo_anemia/labels/train/: 1.txt  17.txt  18.txt  20.txt  20200118_164733.txt  20200124_160522.txt  20200124_161452.txt  20200124_184029.txt  20200124_202947.txt  20200131_205917.txt  20200203_091841.txt  20200203_094523.txt  20200203_103722.txt  20200203_190841.txt  20200204_154215.txt  20200204_155221.txt  20200209_122613.txt  20200209_132714.txt  20200211_140525.txt  20200211_143315.txt  (+134 more)
(+40 files in other folders)
